<resources>
    <string name="app_name">Smart Food Tracker</string>
    <string name="date_format_backend_api">yyyy-MM-dd\'T\'HH:mm:ss\'Z\'</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="date_format_sep">-</string>
    <string name="date_format_lenient_sep">/</string>
    <string name="inventory_fragment_title">Inventory</string>
    <string name="generic_error">Something went wrong.</string>
    <string name="backend_api_url">http://food-fit.herokuapp.com</string>
    <string name="inventory_fetch_error">Failed to fetch the inventory.</string>
    <string name="item_quantity_formatter" formatted="false">%1$.2f %2$s</string>
    <string name="item_consumed_message_formatter" formatted="false">%1$s consumed.</string>
    <string name="item_delete_failure">"Failed to delete the item."</string>
    <string name="add_item">Add item</string>
    <string name="edit_item">Edit item</string>
    <string name="item_name">Name</string>
    <string name="item_quantity">Quantity</string>

    <!--Make sure that you update InventoryItem.Units enum too if you change this array-->
    <string-array name="item_quantity_units_options">
        <item>#</item> <!--Units.WholeNumbers-->
        <item>kg</item> <!--Units.Kilograms-->
        <item>lb</item> <!--Units.Pounds-->
        <item>l</item> <!--Units.Litres-->
    </string-array>

    <string name="item_expiry_date_formatter" formatted="false">Expiry (%1$s)</string>
    <string name="item_fetch_error">Failed to fetch item for editing.</string>
    <string name="accept">Accept</string>
    <string name="item_edit_cancelled">Item editing cancelled.</string>
    <string name="item_add_cancelled">Item creation cancelled.</string>
    <string name="item_edited">Item edited.</string>
    <string name="item_added">Item added.</string>
    <string name="item_add_error">Failed to create item.</string>
    <string name="item_edit_error">Failed to edit item.</string>
    <string name="item_quantity_invalid_error">Quantity must be a valid number.</string>
    <string name="item_title_invalid_error">Title must be present.</string>
    <string name="item_expiry_invalid_error">Expiry date must be a valid date.</string>
    <string name="recipes_fragment_title">Recipes</string>
    <string name="about_fragment_title">About</string>
    <string name="recipes_fetch_error">Failed to fetch the recipes.</string>
    <string name="recipe_detail_fragment_title">Recipe</string>
    <string name="recipe_step_formatter">%1$d. %2$s</string>
    <string name="recipe_unsatisfied_ingredient_formatter">\u2022 %s</string>
    <string name="recipe_satisfied_ingredient_formatter">\u2022 %s \u2713</string>
    <string name="recipe_image_description">Recipe image</string>
    <string name="recipe_source_learn_more">Learn more:</string>
    <string name="recipe_source_url_html_formatter"><![CDATA[<a href=\"%2$s\">%1$s</a>]]></string>
    <string name="duplicate_item_error_formatter">%1$s already exists; edit that instead.</string>
    <string name="recipe_search_fragment_title">Search recipes</string>
    <string name="recipe_search_field_hint">Query</string>
    <string name="recipe_search_result_title">Search results</string>
    <string name="cuisine_label">Cuisine</string>
    <string name="recipe_type_label">Recipe type</string>
    <string name="add_ingredient_field_hint">Add ingredient</string>
    <string name="ingredient_already_added_formatter">Ingredient %1$s is already present.</string>
    <string name="empty_recipe_search_form">The search form cannot be empty.</string>
    <string name="intolerances_title">Intolerances</string>
    <string name="app_description">Thank you for downloading the companion app for Smart Food Tracker.
        This app was built as part of the Group 2 capstone project for ECE 492 Winter 2017 at the University of Alberta.
        For any feedback, please visit the project\'s <a href="https://github.com/SmartFoodTracker">GitHub</a> page.</string>
    <string name="app_credits_title">With \u2764, the SFT team.</string>
    <string name="udey_name"><a href="https://github.com/udeyrishi">Udey Rishi</a></string>
    <string name="kyle_name"><a href="https://github.com/kyleoshaughnessy">Kyle O\'Shaughnessy</a></string>
    <string name="hoskins_name"><a href="https://github.com/ahoskins">Andrew Hoskins</a></string>
    <string name="bradshaw_name"><a href="https://github.com/bradshawz">Andrew Bradshaw</a></string>
    <string name="hoskins_image">https://avatars2.githubusercontent.com/u/1527504?v=3&amp;s=400</string>
    <string name="udey_image">https://avatars1.githubusercontent.com/u/4692593?v=3&amp;s=400</string>
    <string name="kyle_image">https://avatars0.githubusercontent.com/u/5834110?v=3&amp;s=400</string>
    <string name="bradshaw_image">https://avatars3.githubusercontent.com/u/6673581?v=3&amp;s=400</string>
    <string name="app_external_sources_title">Shoutout to these awesome open-source projects that helped build this app!</string>
    <string name="app_external_sources"> \u2022 <a href="http://jakewharton.github.io/butterknife/">ButterKnife</a>\n\n
        \u2022 <a href="http://square.github.io/okhttp/">OkHttp</a>\n\n
        \u2022 <a href="http://square.github.io/retrofit/">Retrofit</a>\n\n
        \u2022 <a href="https://github.com/bumptech/glide">Glide</a>\n\n
        \u2022 <a href="https://github.com/google/flexbox-layout">FlexboxLayout</a>
    </string>
    <string name="recipe_ingredients">Ingredients</string>
    <string name="recipe_steps">Steps</string>
</resources>
