<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_inventory"
        android:enabled="true"
        android:icon="@drawable/ic_inventory"
        android:title="@string/inventory_fragment_title"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_recipes"
        android:enabled="true"
        android:icon="@drawable/ic_recipes"
        android:title="@string/recipes_fragment_title"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_about"
        android:enabled="true"
        android:icon="@drawable/ic_info"
        android:title="@string/about_fragment_title"
        app:showAsAction="ifRoom"/>
</menu>