<?xml version="1.0" encoding="utf-8"?>
<aaku492.smartfoodtracker.about.AboutFragmentView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:id="@+id/app_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/app_description"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_credits_title"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/udey_image"
                        android:layout_width="@dimen/image_thumbnail_side"
                        android:layout_height="@dimen/image_thumbnail_side"
                        android:contentDescription="@string/udey_name" />

                    <TextView
                        android:id="@+id/udey_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/udey_name"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    tools:ignore="RelativeOverlap,UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/kyle_image"
                        android:layout_width="@dimen/image_thumbnail_side"
                        android:layout_height="@dimen/image_thumbnail_side"
                        android:contentDescription="@string/kyle_name" />

                    <TextView
                        android:id="@+id/kyle_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kyle_name"/>

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/hoskins_image"
                        android:layout_width="@dimen/image_thumbnail_side"
                        android:layout_height="@dimen/image_thumbnail_side"
                        android:contentDescription="@string/hoskins_name" />

                    <TextView
                        android:id="@+id/hoskins_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hoskins_name"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    tools:ignore="RelativeOverlap,UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/bradshaw_image"
                        android:layout_width="@dimen/image_thumbnail_side"
                        android:layout_height="@dimen/image_thumbnail_side"
                        android:contentDescription="@string/bradshaw_name" />

                    <TextView
                        android:id="@+id/bradshaw_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bradshaw_name"/>

                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:text="@string/app_external_sources_title"/>
            
            <TextView
                android:id="@+id/app_sources"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_external_sources"/>

        </LinearLayout>
    </ScrollView>

</aaku492.smartfoodtracker.about.AboutFragmentView>